fix(gdocs): textarea no longer wrapping

--- a/adminSiteClient/admin.scss
+++ b/adminSiteClient/admin.scss
@@ -1262,4 +1262,12 @@ main:not(.ChartEditorPage):not(.GdocsEditPage) {
             );
         }
     }
+
+    .ant-typography-edit-content {
+        flex: 1;
+    }
+
+    .ant-typography-edit {
+        margin-right: 12px;
+    }
 }
